--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,18 +6,18 @@
 
 <body class="body">
     <div class="page">
-        <main class="main">
-            <section class="intro">
+        <main data-scroll-container class="main">
+            <section data-scroll-section class="intro">
                 <div class="intro__content container">
-                    <h1 class="intro__title">creative scroll</h2>
-                    <div data-speed=".7" class="intro__img">
+                    <h1 data-scroll data-scroll-speed="2.5" class="intro__title">creative scroll</h2>
+                    <div class="intro__img">
                         <img src="@img/hero.png" alt="">
                     </div>
                 </div>
             </section>
-            <div class="portfolio">
+            <div data-scroll-section class="portfolio">
                 <div class="portfolio__content container">
-                    <div data-speed=".95" class="portfolio__left-block">
+                    <div data-scroll data-scroll-speed="-1" data-scroll class="portfolio__left-block">
                         <img class="portdolio__item" src="@img/work/1.jpg" alt="">
                         <img class="portdolio__item" src="@img/work/2.jpg" alt="">
                         <div class="potrfolio__text-block portdolio__item">
@@ -26,7 +26,7 @@
                         </div>
                         <img class="portdolio__item" src="@img/work/6.jpg" alt="">
                     </div>
-                    <div data-speed="1.2" class="portfolio__right-block">
+                    <div data-scroll data-scroll-speed="2" class="portfolio__right-block">
                         <div class="potrfolio__text-block portdolio__item">
                             <h2 class="portfolio__title">Creative floating scroll with amazing parallax effect</h2>
                             <p class="portfolio__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium sunt quam aliquid deleniti commodi reprehenderit?</p>
